--- a/.github/workflow/api-cicd.yaml
+++ b/.github/workflow/api-cicd.yaml
@@ -7,11 +7,12 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   pr:
     # run this if its a PR
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
