--- a/.github/workflows/api-cicd.yaml
+++ b/.github/workflows/api-cicd.yaml
@@ -43,7 +43,10 @@ jobs:
           python-version: '3.8'
 
       - name: Install dependencies
-        run: pipenv install
+        run: |
+          python -m pip install --upgrade pip setuptools
+          python -m pip install --user pipenv
+          pipenv install
 
       - name: Run tests
         run: pipenv run python -m unittest
